--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,108 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
+import flet as ft
+import backend  # Importa nosso módulo de backend
 
-# C extensions
-*.so
+def main(page: ft.Page):
+    page.title = "Ranking de Jogadores"
+    page.vertical_alignment = ft.MainAxisAlignment.START
+    page.horizontal_alignment = ft.CrossAxisAlignment.CENTER
+    page.theme_mode = ft.ThemeMode.DARK
+    page.window_width = 800
+    page.window_height = 600
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+    # --- Componentes da Interface ---
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+    # Tabela para exibir os dados do ranking
+    tabela_ranking = ft.DataTable(
+        columns=[
+            ft.DataColumn(ft.Text("Pos.", weight=ft.FontWeight.BOLD)),
+            ft.DataColumn(ft.Text("Nome", weight=ft.FontWeight.BOLD)),
+            ft.DataColumn(ft.Text("Nível", weight=ft.FontWeight.BOLD), numeric=True),
+            ft.DataColumn(ft.Text("Pontuação", weight=ft.FontWeight.BOLD), numeric=True),
+        ],
+        rows=[],
+        column_spacing=60,
+        data_row_min_height=40,
+    )
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+    # --- Funções de Evento (Callbacks) ---
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
+    def exibir_ranking_selecionado(e):
+        """Callback acionado quando o usuário seleciona uma data no Dropdown."""
+        data_selecionada = dropdown_listas.value
+        if not data_selecionada:
+            return
 
-# Translations
-*.mo
-*.pot
+        # 1. Carrega os dados usando a função do backend
+        ranking = backend.carregar_ranking_por_data(data_selecionada)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+        # 2. Limpa as linhas existentes da tabela
+        tabela_ranking.rows.clear()
+        
+        # 3. Ícones para o TOP 3 (CORREÇÃO APLICADA AQUI)
+        icones = [
+            ft.Icon(name=ft.Icons.EMOJI_EVENTS, color=ft.Colors.AMBER),
+            ft.Icon(name=ft.Icons.EMOJI_EVENTS, color=ft.Colors.BLUE_GREY_200),
+            ft.Icon(name=ft.Icons.EMOJI_EVENTS, color=ft.Colors.BROWN_400),
+        ]
 
-# Flask stuff:
-instance/
-.webassets-cache
+        # 4. Popula a tabela com os novos dados
+        for i, jogador in enumerate(ranking):
+            posicao_cell = ft.DataCell(
+                ft.Row([
+                    icones[i] if i < 3 else ft.Container(width=24), # Adiciona ícone ou espaço
+                    ft.Text(f"{i+1}º")
+                ])
+            )
+            
+            tabela_ranking.rows.append(
+                ft.DataRow(
+                    cells=[
+                        posicao_cell,
+                        ft.DataCell(ft.Text(jogador.nome)),
+                        ft.DataCell(ft.Text(str(jogador.nivel))),
+                        ft.DataCell(ft.Text(f"{jogador.pontuacao:,.2f}".replace(",", "X").replace(".", ",").replace("X", "."))), # Formatação BR
+                    ]
+                )
+            )
+        
+        page.update()
 
-# Scrapy stuff:
-.scrapy
+    # --- Lógica de Inicialização ---
+    
+    # 1. Processa o CSV e popula o BD ao iniciar a aplicação
+    backend.criar_banco_de_dados()
+    backend.processar_csv()
+    
+    # 2. Obtém as listas de ranking do backend
+    listas_disponiveis = backend.obter_listas_de_ranking()
+    opcoes_dropdown = [ft.dropdown.Option(data) for data in listas_disponiveis]
 
-# Sphinx documentation
-docs/_build/
+    # 3. Cria o Dropdown com as listas
+    dropdown_listas = ft.Dropdown(
+        label="Selecione a Data do Ranking",
+        options=opcoes_dropdown,
+        on_change=exibir_ranking_selecionado,
+        width=300,
+    )
 
-# PyBuilder
-.pybuilder/
-target/
+    # --- Montagem da Página ---
+    
+    page.add(
+        ft.Column(
+            [
+                ft.Text("🏆 Ranking de Jogadores 🏆", size=32, weight=ft.FontWeight.BOLD, text_align=ft.TextAlign.CENTER),
+                ft.Divider(),
+                dropdown_listas,
+                ft.Container(height=20),
+                ft.Column([tabela_ranking], scroll=ft.ScrollMode.AUTO, expand=True) # Coluna rolável
+            ],
+            alignment=ft.MainAxisAlignment.START,
+            horizontal_alignment=ft.CrossAxisAlignment.CENTER,
+            expand=True,
+        )
+    )
+    page.update()
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
-
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
-
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
-
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
-
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+# --- Ponto de Entrada da Aplicação ---
+if __name__ == "__main__":
+    ft.app(target=main)
